modified OrganizationDTO